kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: flask
  name: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
#  strategy:
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 1
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: development
        - name: APP_SETTINGS
          value: project.config.DevelopmentConfig
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: postgres-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-credentials
        image: fingertip/flask-kubernetes:latest
#        image: fingertip/myhello:latest
        imagePullPolicy: Always
        name: flask
#        resources: {}
#        terminationMessagePath: /dev/termination-log
#        terminationMessagePolicy: File
#      dnsPolicy: ClusterFirst
#      restartPolicy: Always
#      schedulerName: default-scheduler
#      securityContext: {}
#      terminationGracePeriodSeconds: 30
#status: {}
