kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    service: flask
spec:
#  type: LoadBalancer 
#        GCP creates a loadbalancer-controller for the NodePort service
  type: NodePort   # GCP doesn't like a ClusterIP service behind ingress
# https://kubernetes.io/docs/concepts/services-networking/service/
# Unspecified type will create ClusterIP
# ClusterIP: Exposes the Service on a cluster-internal IP. 
# Choosing this value makes the Service only reachable from within the cluster. 
# This is the default ServiceType.
# Default (ClusterIP) works for minikube and microk8s
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
